// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledAvatar /> sizes renders default properly 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  background-color: #29863A;
  box-sizing: border-box;
  border: 1px solid;
  border-color: #29863A;
  height: 24px;
  width: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
  height="24px"
  width="24px"
/>
`;

exports[`<StyledAvatar /> sizes renders medium properly 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  background-color: #29863A;
  box-sizing: border-box;
  border: 1px solid;
  border-color: #29863A;
  height: 32px;
  width: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
  height="32px"
  width="32px"
/>
`;
